kyverno-policies/validate/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag

spec:
  validationFailureAction: Enforce

  rules:
  - name: validate-image-tag

    match:
      any:
      - resources:
          kinds:
          - Pod

    validate:

      message: "latest image tag is not allowed."

      pattern:
        spec:
          containers:
          - image: "!*:latest"
