kyverno-policies/validate/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources

spec:

  validationFailureAction: Enforce

  rules:

  - name: validate-resources

    match:
      any:
      - resources:
          kinds:
          - Pod

    validate:

      message: "CPU and Memory limits are mandatory."

      pattern:

        spec:

          containers:

          - resources:

              requests:

                cpu: "?*"

                memory: "?*"

              limits:

                cpu: "?*"

                memory: "?*"
